Update all samples to Aspire 13.4.6 and fix runtime failures (#84)
* Update all samples to Aspire 13.4.6

Bump all 8 samples from Aspire 13.2.4 to 13.4.6:
- C#: dotnet-angular-cosmos, polyglot-event-stream (SDK + PackageReferences)
- TypeScript: ts-starter, vite-react-api (aspire.config.json, withOtlpExporter fix)
- Polyglot: flask-markdown-wiki, django-htmx-polls, spring-boot-postgres,
  svelte-go-bookmarks (aspire.config.json sdk.version)

Migrate Go/Python/Java bindings to the 13.4.6 .aspire/modules/ layout:
- Python (flask, django): import create_builder from aspire_app via .aspire/modules
- Java (spring): compile via .aspire/modules/sources.txt; addDockerfile 4->2 param
- Go (svelte): go.mod replace -> ./.aspire/modules; apphost options-struct API
- Remove stale top-level .modules/ for the three migrated samples
- TypeScript samples intentionally remain on .modules/

Update .gitignore for .aspire/modules/.codegen-hash and transient caches.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Fix Java AppHost for Aspire 13.4.6: default package + waitFor ordering

- Removed 'package aspire;' declaration from AppHost.java
- Added 'import aspire.*;' to access generated bindings
- Added api.waitFor(pg) for explicit startup ordering
- Prevents ClassNotFoundException and cold-start race conditions
- Verified with launcher's exact javac command
- Updated Thor history, created decision doc, extracted skill

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* docs(squad): record runtime-QA of all 8 samples at Aspire 13.4.6

All 8 polyglot samples launched, run, and functionally verified (PASS).
Consolidated the Python/Go/Java startup-ordering + Java launch-blocker
decisions into decisions.md and cleared the inbox.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>

* fix(dotnet-angular-cosmos): resolve API proxy target from Aspire env

The Angular dev-server proxy hard-coded the API target to
http://localhost